[package]
name = "warp_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.27.0", features = ["full"] }
warp = { version = "0.3.4", features = ["tls"] }
